Update Guide, Startup Scripts, and add Utility Tools

--- a/使い方ガイド.md
+++ b/使い方ガイド.md
@@ -4,122 +4,75 @@
 エクセルベースの営業日報を、モダンなWebインターフェースで管理できるシステムです。
 既存のエクセルファイル（`.xlsm`）の関数やマクロを保持したまま、データの入力・閲覧・分析が可能です。
 
-## 🏗️ システム構成
+## 🚀 かんたん起動方法（推奨）
 
-### バックエンド (Python + FastAPI)
-- **場所**: `backend/main.py`
-- **ポート**: `http://localhost:8000`
-- **役割**: エクセルファイルの読み書きを担当
+**`営業日報システム起動.vbs`** をダブルクリックしてください。
 
-### フロントエンド (Next.js + React)
-- **場所**: `frontend/`
-- **ポート**: `http://localhost:3000`
-- **役割**: ユーザーインターフェース
+- バックエンド（黒い画面）とフロントエンド（Web画面）が自動的に起動します。
+- ブラウザが自動的に開き、システムが使用可能になります。
+- **初回のみ**: 必要なプログラムのインストールが自動的に行われるため、起動に数分かかる場合がありますが、そのままお待ちください。
+
+---
+
+## 🏗️ システム構成 & 詳細起動
+
+### ファイル構成
+- `start_app.bat`: 上記VBScriptから呼び出される本体の起動スクリプトです。直接実行してもOKです。
+- `backend/`: Pythonで動作するサーバープログラム（エクセル操作担当）。
+- `frontend/`: Web画面のプログラム。
 
 ### データ保存先
-- **ファイル**: `daily_report_template.xlsm`
-- エクセルの関数やマクロはそのまま保持されます
+- ネットワーク上の `2025年度` フォルダにある日報ファイル（`.xlsm`）を自動的に読み書きします。
+- 原本ファイルや、最新の日付のファイルを自動検出して使用します。
 
-## 🚀 起動方法
+---
 
-### 1. バックエンドの起動
-```powershell
-cd backend
-py main.py
-```
-→ `http://0.0.0.0:8000` で起動します
+## 📋 新機能・変更点 (2025.12.15 Update)
 
-### 2. フロントエンドの起動
-```powershell
-cd frontend
-npm run dev
-```
-→ `http://localhost:3000` で起動します
+### 1. デザイン種別のプルダウン化
+- 新規入力時の「デザイン種別」がプルダウン選択式になりました。
+- 選択肢: `-`, `別注（新版）`, `別注（改版）`, `別注（再版）`, `SP（新版）`
+- エクセル原本のマクロ定義に基づいた正しい値を入力できます。
 
-### 3. ブラウザでアクセス
-`http://localhost:3000` を開く
+### 2. 「外出時間」の入力改善
+- 行動内容で「**外出時間**」を選択した場合のみ、以下の項目が表示されます。
+    - **出発時間 / 帰社時間**: 30分単位で選択可能。
+    - **満足度（ランク）**: 25%〜100% の4段階で選択可能。
+- これらの情報は、保存時に「商談内容」の欄に自動的に追記されます。
+    - 例: `【外出時間】09:00〜18:00` `【満足度】75%`
+- ※通常のランク（S〜D）としては保存されません（集計用データへの影響を防ぐため）。
 
-## 📋 機能
+### 3. 入力画面の最適化（社内作業など）
+- 「社内（１日）」「量販店調査」などを選択した場合、不要な項目（訪問先名、面談者など）が自動的に隠れ、入力しやすくなりました。
 
-### 1. 日報一覧表示（トップページ）
-- エクセルに保存されている全ての日報を一覧表示
-- 日付、行動内容、エリア、訪問先、面談者、商談内容などを表示
-- データは自動的にエクセルから読み込まれます
+---
 
-### 2. 新規日報入力（入力フォーム）
-- 「＋ 新規入力」ボタンから入力画面へ
-- 以下の項目を入力可能:
-  - 日付 (必須)
-  - 行動内容 (必須) - 訪問/電話/メール/その他
-  - エリア
-  - 得意先CD
-  - 訪問先名 (必須)
-  - 面談者
-  - 滞在時間
-  - 商談内容
-  - 提案物
-  - 次回プラン
+## 🎨 基本機能
 
-- 「日報を登録」ボタンで保存
-- データは自動的にエクセルファイルに追記されます
+### 1. 日報一覧表示
+- 保存されている日報を一覧で確認できます。
+- 日付順、管理番号順に表示されます。
 
-## 🎨 デザインの特徴
-- **ダークモード**: 目に優しいダークテーマ
-- **グラデーション**: 紫〜ピンクのモダンなグラデーション
-- **ガラスモーフィズム**: 半透明の背景とぼかし効果
-- **レスポンシブ**: PC・タブレット・スマホに対応
+### 2. 新規日報入力
+- 「＋ 新規入力」ボタンから作成できます。
+- エクセルファイルには自動的に行が追加され、管理番号が採番されます。
+- バックアップ機能により、保存時に自動的に `.bak` ファイルが作成されるため安心です。
 
-## 🔧 技術スタック
+---
 
-### バックエンド
-- **FastAPI**: 高速なPython Webフレームワーク
-- **pandas**: データ処理
-- **openpyxl**: エクセルファイルの読み書き（VBAマクロ保持）
-- **uvicorn**: ASGIサーバー
+## ⚠️ 注意事項 & トラブルシューティング
 
-### フロントエンド
-- **Next.js 16**: Reactフレームワーク
-- **TypeScript**: 型安全な開発
-- **Tailwind CSS**: ユーティリティファーストCSS
+### 起動しない・エラーが出る場合
+1. **黒い画面（ターミナル）を確認**: エラーメッセージが表示されていないか確認してください。
+2. **500 エラー**: サーバー内部エラーです。
+    - 以前発生していた「ファイルが見つからない」エラーは修正されました。
+    - それでも発生する場合は、ネットワーク接続（`\\Asahipack02` へのアクセス）を確認してください。
+3. **文字化け**: 設定ファイルを修正済みですので、基本的には発生しません。
+4. **VBScriptエラー**: 最新版では修正済みです。もしエラーが出る場合は、`git pull` で最新にするか、配布されたZIPファイルを使用してください。
 
-## 📝 今後の拡張予定
-
-### Phase 3: 分析機能
-- [ ] 月次訪問件数のグラフ化
-- [ ] エリア別の活動分析
-- [ ] 重点顧客の訪問履歴
-- [ ] カレンダー形式での表示
-
-### Phase 4: その他の機能
-- [ ] 日報の編集機能
-- [ ] 日報の削除機能
-- [ ] 検索・フィルター機能
-- [ ] CSVエクスポート
-- [ ] PDF出力
-
-## ⚠️ 注意事項
-- エクセルファイルは自動的に上書き保存されます
-- 複数人で同時に使用する場合は、ファイルロックに注意してください
-- バックアップは定期的に取ることをお勧めします
-
-## 🐛 トラブルシューティング
-
-### エラー: "Failed to fetch"
-- バックエンドが起動しているか確認してください
-- `http://localhost:8000` にアクセスして、`{"message": "Daily Report API is running"}` が表示されるか確認
-
-### エラー: "Excel file not found"
-- `daily_report_template.xlsm` が正しい場所にあるか確認してください
-- バックエンドの `main.py` から見て `../daily_report_template.xlsm` の位置にあるべきです
-
-### データが表示されない
-- ブラウザのコンソール（F12）でエラーを確認
-- バックエンドのターミナルでエラーログを確認
+### ブラウザで "Failed to fetch" と出る
+- バックエンド（黒い画面）が閉じている可能性があります。`営業日報システム起動.vbs` を再度実行してください。
 
 ## 📞 サポート
-問題が発生した場合は、以下を確認してください:
-1. Python 3.13がインストールされているか
-2. Node.js 24.3.0がインストールされているか
-3. 必要なパッケージがインストールされているか
-   - バックエンド: `py -m pip install fastapi uvicorn pandas openpyxl`
-   - フロントエンド: `npm install` (frontendフォルダ内で実行)
+本システムは `Python 3.13` および `Node.js` で動作しています。
+社用PCでセットアップする場合は、同梱の `setup_for_company.ps1` を管理者権限で実行すると、必要な設定ファイルが作成されます。
